Solving an overflow issue in media queries

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -49,7 +49,7 @@
     }
 
     section {
-        margin: 0 10rem;
+        margin: 0 1rem;
     }
 
     .section__pic-container {
@@ -57,7 +57,7 @@
         height: 275px;
         position: relative;
         display: flex;
-        padding-left: 75px;
+        padding-left: 0;
 
     }
 
@@ -127,8 +127,7 @@
 
     .about-profile .contained .pic img {
         position: relative;
-        left: 120px;
-        right: 200px;
+        align-items: center;
     }
 
     .contact-info-container p {
